--- a/guidline.ipynb
+++ b/guidline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
@@ -43,8 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clear and specific instructions should be provided to guide a model towards the desired output, and longer prompts can provide more clarity and context for the model, leading to more detailed and relevant outputs.\n"
+     ]
+    }
+   ],
    "source": [
     "text = f\"\"\"\n",
     "You should express what you want a model to do by \\\n",
@@ -75,8 +83,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "  {\n",
+      "    \"book_id\": 1,\n",
+      "    \"title\": \"The Lost City of Zorath\",\n",
+      "    \"author\": \"Aria Blackwood\",\n",
+      "    \"genre\": \"Fantasy\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"book_id\": 2,\n",
+      "    \"title\": \"The Last Survivors\",\n",
+      "    \"author\": \"Ethan Stone\",\n",
+      "    \"genre\": \"Science Fiction\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"book_id\": 3,\n",
+      "    \"title\": \"The Secret Life of Bees\",\n",
+      "    \"author\": \"Lila Rose\",\n",
+      "    \"genre\": \"Romance\"\n",
+      "  }\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Generate a list of three made-up book titles along \\\n",
@@ -96,8 +131,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion for Text 1:\n",
+      "Step 1 - Get some water boiling.\n",
+      "Step 2 - Grab a cup and put a tea bag in it.\n",
+      "Step 3 - Once the water is hot enough, pour it over the tea bag.\n",
+      "Step 4 - Let it sit for a bit so the tea can steep.\n",
+      "Step 5 - After a few minutes, take out the tea bag.\n",
+      "Step 6 - Add some sugar or milk to taste.\n",
+      "Step 7 - Enjoy your delicious cup of tea!\n"
+     ]
+    }
+   ],
    "source": [
     "text_1 = f\"\"\"\n",
     "Making a cup of tea is easy! First, you need to get some \\\n",
@@ -138,8 +188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion for Text 2:\n",
+      "No steps provided.\n"
+     ]
+    }
+   ],
    "source": [
     "text_2 = f\"\"\"\n",
     "The sun is shining brightly today, and the birds are \\\n",
@@ -180,8 +239,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<grandparent>: Resilience is like a tree that bends with the wind but never breaks. It is the ability to bounce back from adversity and keep moving forward, even when things get tough. Just like a tree needs strong roots to weather a storm, we need inner strength and determination to overcome challenges and thrive.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to answer in a consistent style.\n",
@@ -207,8 +274,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion for prompt 1:\n",
+      "Two siblings, Jack and Jill, go on a quest to fetch water from a well on a hill, but they both fall down the hill and return home slightly battered but still adventurous.\n",
+      "\n",
+      "Deux frères et sœurs, Jack et Jill, partent en quête d'eau d'un puits sur une colline, mais ils tombent tous les deux et rentrent chez eux légèrement meurtris mais toujours aventureux. \n",
+      "\n",
+      "Jack, Jill. \n",
+      "\n",
+      "{\n",
+      "  \"french_summary\": \"Deux frères et sœurs, Jack et Jill, partent en quête d'eau d'un puits sur une colline, mais ils tombent tous les deux et rentrent chez eux légèrement meurtris mais toujours aventureux.\",\n",
+      "  \"num_names\": 2\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "text = f\"\"\"\n",
     "In a charming village, siblings Jack and Jill set out on \\\n",
@@ -249,8 +334,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Completion for prompt 2:\n",
+      "Summary: Jack and Jill go on a quest to fetch water from a hilltop well, but misfortune strikes and they tumble down the hill, returning home slightly battered but with their adventurous spirits undimmed.\n",
+      "Translation: Jack et Jill partent en quête d'eau d'un puits au sommet d'une colline, mais un malheur frappe et ils dégringolent la colline, rentrant chez eux légèrement meurtris mais avec leurs esprits aventureux intacts.\n",
+      "Names: Jack, Jill\n",
+      "Output JSON: {\"french_summary\": \"Jack et Jill partent en quête d'eau d'un puits au sommet d'une colline, mais un malheur frappe et ils dégringolent la colline, rentrant chez eux légèrement meurtris mais avec leurs esprits aventureux intacts.\", \"num_names\": 2}\n"
+     ]
+    }
+   ],
    "source": [
     "prompt_2 = f\"\"\"\n",
     "Your task is to perform the following actions:\n",
@@ -283,8 +381,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The student's solution is correct.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Determine if the student's solution is correct or not.\n",
@@ -320,8 +426,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The student's solution is correct.\n",
+      "\n",
+      "Steps:\n",
+      "Let x be the size of the installation in square feet.\n",
+      "Costs:\n",
+      "1. Land cost: 100x\n",
+      "2. Solar panel cost: 250x\n",
+      "3. Maintenance cost: 100,000 + 10x\n",
+      "Total cost: 100x + 250x + 100,000 + 10x = 360x + 100,000\n",
+      "\n",
+      "Is the student's solution the same as actual solution just calculated:\n",
+      "Yes\n",
+      "\n",
+      "Student grade:\n",
+      "Correct\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to determine if the student's solution \\\n",
@@ -391,8 +519,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The AeroGlide UltraSlim Smart Toothbrush by Boie is a high-tech toothbrush that uses advanced sonic technology to provide a deep and thorough clean. It features a slim and sleek design that makes it easy to hold and maneuver, and it comes with a range of smart features that help you optimize your brushing routine.\n",
+      "\n",
+      "One of the key features of the AeroGlide UltraSlim Smart Toothbrush is its advanced sonic technology, which uses high-frequency vibrations to break up plaque and bacteria on your teeth and gums. This technology is highly effective at removing even the toughest stains and buildup, leaving your teeth feeling clean and refreshed.\n",
+      "\n",
+      "In addition to its sonic technology, the AeroGlide UltraSlim Smart Toothbrush also comes with a range of smart features that help you optimize your brushing routine. These include a built-in timer that ensures you brush for the recommended two minutes, as well as a pressure sensor that alerts you if you're brushing too hard.\n",
+      "\n",
+      "Overall, the AeroGlide UltraSlim Smart Toothbrush by Boie is a highly advanced and effective toothbrush that is perfect for anyone looking to take their oral hygiene to the next level. With its advanced sonic technology and smart features, it provides a deep and thorough clean that leaves your teeth feeling fresh and healthy.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Tell me about AeroGlide UltraSlim Smart Toothbrush by Boie\n",
